# Test-de-Personalidad-Interactivo

./: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  LICENSE  README.md  compose.yml
backend/: .env.example  .gitignore  agents.py  main.py  main_async.py  pyproject.toml  qdrant_setup.py  tasks.py
backend/tools/: qdrant_tools.py
frontend/: biome.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/game/: game-over.tsx  game-setup.tsx  game-view.tsx  loading-screen.tsx  text.txt
frontend/components/ui/: button.tsx  card.tsx
frontend/game/: constants.ts  scenes.ts  types.ts  utils.ts
frontend/hooks/: use-game-logic.ts
